cmake_minimum_required(VERSION 2.8)

if(WIN32)
    # Dll treated as runtime
    set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/libs)
else(WIN32)
    set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/libs)
endif(WIN32)

MACRO(SUBDIRLIST result curdir)
  FILE(GLOB children RELATIVE ${curdir} ${curdir}/*)
  SET(dirlist "")
  FOREACH(child ${children})
    IF(IS_DIRECTORY ${curdir}/${child})
        SET(dirlist ${dirlist} ${child})
    ENDIF()
  ENDFOREACH()
  SET(${result} ${dirlist})
ENDMACRO()

set(WITH_OPERATORS TRUE CACHE BOOL "Enable operators")
if(WITH_OPERATORS)
  SUBDIRLIST(SUBDIRS ${CMAKE_CURRENT_SOURCE_DIR})

  #list(REMOVE_ITEM SUBDIRS "common")
  list(REMOVE_ITEM SUBDIRS "CMakeFiles") # this directory is created by cpack (TODO: validate)
  if(NOT WITH_OPENVDB)
    list(REMOVE_ITEM SUBDIRS "levelset_to_mesh")
    list(REMOVE_ITEM SUBDIRS "ovdb_smooth")
    list(REMOVE_ITEM SUBDIRS "surfrecon_openvdb")
  endif(NOT WITH_OPENVDB)
  if(NOT WITH_PCL)
    list(REMOVE_ITEM SUBDIRS "centroid_to_origin")
    list(REMOVE_ITEM SUBDIRS "load_pointcloud")
    list(REMOVE_ITEM SUBDIRS "normalestimation")
    list(REMOVE_ITEM SUBDIRS "surfrecon_openvdb")
    list(REMOVE_ITEM SUBDIRS "voxelgridfilter")
  endif(NOT WITH_PCL)
  if(NOT WITH_LAS)
    list(REMOVE_ITEM SUBDIRS "load_las_from_csv")
    list(REMOVE_ITEM SUBDIRS "pcd2las")
    list(REMOVE_ITEM SUBDIRS "las2pcd")
  endif(NOT WITH_LAS)

  FOREACH(subdir ${SUBDIRS})
    ADD_SUBDIRECTORY(${subdir})
  ENDFOREACH()
endif(WITH_OPERATORS)
